--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,12 @@
         android:layout_centerVertical="true">
 
         <EditText
-            android:id="@+id/email_edit_txt"
+            android:id="@+id/txt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:background="#FFF"
-            android:hint="@string/hint_email"
+            android:hint="@string/hint_username"
             android:padding="8dp"
             android:textSize="12sp" />
 
@@ -31,7 +31,7 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/email_edit_txt"
+            android:layout_below="@id/txt_username"
             android:layout_marginBottom="5dp"
             android:background="#FFF"
             android:hint="@string/hint_password"
