Custom List App using Base Adapter .

--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.developer.learn_android_acadgild.MainActivity">
+    tools:context="com.android.developer.learn_android_acadgild.ListViewActivity">
 
     <ListView
-        android:id="@+id/list_contacts"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="2px"></ListView>
