--- a/app/src/main/res/layout/layout_version_image.xml
+++ b/app/src/main/res/layout/layout_version_image.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/img_version"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:scaleType="fitCenter">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/custom_border"
+    android:orientation="vertical"
+    android:padding="5dp">
 
-</ImageView>
+    <ImageView
+        android:id="@+id/img_version"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:scaleType="fitCenter"></ImageView>
+
+    <TextView
+        android:id="@+id/txt_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+
+
+        />
+</LinearLayout>
