--- a/app/src/main/res/layout/layout_version_image.xml
+++ b/app/src/main/res/layout/layout_version_image.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/img_version"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:scaleType="fitCenter">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/custom_divider"
+    android:padding="5dp">
 
+    <ImageView
+    android:id="@+id/img_version"
+        android:layout_width="match_parent"
+    android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter">
 </ImageView>
+</LinearLayout>
